--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Editor de Preguntas</title>
   <link rel="stylesheet" href="assets/app.css">
+  <link rel="stylesheet" href="assets/app.mobile.css" media="(max-width: 800px)">
 </head>
 <body>
   <div id="list-root"></div>
